2.16.1:
  - Export datastore filename for cdrom to `datastore_file_name` field.
  - Cleanup storage runtime properties after delete.
2.16.0:
  - Preserve ordering of networks when not external
  - Cleanup create vm error messages
  - Allow users not to specify num CPUs and RAM
  - Fix typo: `contoller` -> `controller`
  - Resubable workflows support
  - Add `add_scale_suffix` for add suffix for instance name by default.
  - Filter network by datacenters before attach.
  - Start vm on create only with `enable_start_vm` equal to True.
  - Cleanup runtime properties after delete ippool, cdrom and server instances.
2.15.1:
  - Fix mistake with network adapters type. #138
2.15.0:
  - Support Solaris guests (OmniOS CE)
  - Wait IP flag for wait any ip's on connected NIC
  - Set extra properties set to VM
  - Deprecate support for cloudify-plugins-common < 4.1.
    https://cloudify.co/product/cloudify-lifecycle/
2.14.0:
  - Export host and datastore for external VM
2.13.1:
  - Fix json keys order in deployments additional parameters for content
    library.
2.13.0:
  - Rename `raw_files` to `files_raw`
  - Fix start external VM without VMware tools
  - Put VM to prexisted folder
2.12.0:
  - Add `enable_start_vm flag` for external VM's
  - Add Content Library support
  - Support OVA deployments from Content Library
  - Export external id for Hypervisor Host, Resource Pool and VM Folder.
2.11.0:
  - IP Pool support
  - CIDR/MTU export for external network based on assigned IP Pool and
    parent switch
2.10.0:
  - Initial CloudInit support
  - MTU export for new created networks
2.9.3:
  - Add `enable_start_vm flag`. Backport from 2.12.0.
2.9.2:
  - CFY-981: DHCP regression fix
2.9.1:
  - Support Servers without memory and cpu values assigned
2.9.0:
  - Support Server - Nic relationship.
  - Start moving from use_existing_resource to use_external_resource.
2.8.0:
  - Support use_external_resource in cloudify.vsphere.nodes.Storage.
  - CY-807: Stabilize tests.
2.7.0: