@@ -88,7 +88,10 @@ CLUSTER_RUNTIME_PROPERTIES = [CLUSTER_ID]
 
 CONTENT_ITEM_ID = "content_item_id"
 CONTENT_LIBRARY_ID = "content_library_id"
-CONTENT_LIBRARY_PROPERTIES = [CONTENT_ITEM_ID, CONTENT_LIBRARY_ID,
+CONTENT_LIBRARY_VM_NAME = "vm_name"
+CONTENT_LIBRARY_PROPERTIES = [CONTENT_ITEM_ID,
+                              CONTENT_LIBRARY_ID,
+                              CONTENT_LIBRARY_VM_NAME,
                               VSPHERE_SERVER_ID]
 
 TASK_CHECK_SLEEP = 15
